--- a/public/index.html
+++ b/public/index.html
@@ -11,20 +11,15 @@
         <div id="navLogo">
             <text id="navLogoText">HH</text>
         </div>
+        <!-- Hamburger icon -->
+        <div id="hamburger">&#9776;</div>
+
+        <!-- Navigation links -->
         <div id="navLinks">
             <ul>
-                <li class="navLink">
-                    <a href="./about.html">About</a>
-                </li>
-                <li class="navLink">
-                    Projects
-                </li>
-                <li class="navLink">
-                    Contact
-                </li>
-                <li class="navLink">
-                    Resume
-                </li>
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -82,5 +77,17 @@
             </div>
         </div>
     </section>
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const navLinks = document.getElementById('navLinks');
+      
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('show');
+        });
+
+        navLinks.addEventListener('click', () => {
+            navLinks.classList.remove('show');
+        });
+    </script>
 </body>
 </html>
